# auxiliary

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setuptools_pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
auxiliary/: __init__.py  conversion.py  io.py  nifti.py  path.py  runscript.py
auxiliary/nifti/: io.py
auxiliary/normalization/: demo_normalizer.py  functional.py
auxiliary/tiff/: io.py
auxiliary/turbopath/: __init__.py  turbopath.py
docs/source/: auxiliary.rst  conf.py  index.rst  io.rst  nifti.rst  normalization.rst  tiff.rst  turbopath.rst
path/: __init__.py
