[build-system]
requires = ["setuptools>=61.0"]

[tool.setuptools]
packages = ["auxiliary"]

[tool.setuptools.dynamic]
#version = {attr = "my_package.VERSION"}
readme = { file = "README.md" }

[tool.setuptools_scm]
write_to = "version.py"

[project]
name = "auxiliary"
requires-python = ">=3.5"
# dynamic = ["version"]
version = "0.0.5"
authors = [{ name = "Florian Kofler", email = "florian.kofler@tum.de" }]
maintainers = [{ name = "Florian Kofler", email = "florian.kofler@tum.de" }]
description = "TODO."
keywords = ["biomedical image analysis", "utils", "helpers", "auxiliary"]
readme = "README.md"
# requires-python = "==3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]
dependencies = [
  # core
  'path==16.7.1',
  'nibabel==3.2.1',
]

[project.optional-dependencies]
dev = ["pytest"]


[project.urls]
# documentation = "TODO"
repository = "https://github.com/neuronflow/auxiliary"
