[tool.poetry]
name = "auxiliary"
version = "0.0.35"
description = "TODO."
authors = ["Florian Kofler <florian.kofler@tum.de>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = ">=3.6"
pathlib = ">=1.0"
nibabel = ">=3.0"
numpy = ">=1.24"
tifffile = ">=2023.8.25"
path = ">=16.7.1"
pillow = ">=10.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
