[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "auxiliary"
version = "0.0.0"
description = "TODO."
authors = ["Florian Kofler <florian.kofler@tum.de>"]
license = "AGPL-3.0"

readme = "README.md"
repository = "https://github.com/BrainLesion/auxiliary"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.24"
tifffile = ">=2023.8.25"
path = ">=17.0.0"
pillow = ">=10.0.0"
simpleitk = ">=2.2.1"
loguru = "^0.7.3"
dcm2niix = "^1.0.20250506"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
sphinx-rtd-theme = ">=1.3.0"
myst-parser = ">=2.0.0"
